--- a/Home.html
+++ b/Home.html
@@ -15,6 +15,7 @@
 <body>
 
     <div class="wrap">
+        <div class="top-wrap">
         <div class="header">
             <div class="dehaze">
                 <svg style="fill: #3F5D45;" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
@@ -60,6 +61,7 @@
             </div>
 
         </div>
+    </div>
         <div class="info">
             <div class="infoin">
                 <div class="img_horiz">
