--- a/Product.html
+++ b/Product.html
@@ -12,6 +12,7 @@
 
 <body>
     <div class="wrap">
+        <div class="top-wrap">
         <div class="header">
             <div class="dehaze">
                 <svg style="fill: #3F5D45;" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
@@ -46,6 +47,7 @@
         <div class="banner">
             <img class="liketoeat" src="image/lg-想吃甜點是不需要理由的.svg" alt="">
         </div>
+    </div>
         <div class="product_bg">
             <div class="product_item">
 
